examples/bad/syntax3.swifty
//expression is not a statement

var x = 5
5 + 5 //error
